Compilation of core classes was fixed.